<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="scoreViewModel" type="com.chibee.scoreboard.ScoreViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SetupFragment">

        <TextView
            android:id="@+id/team_B_Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            style="@style/teamName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/team_A_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            style="@style/teamName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="205dp"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/team_A_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="16dp"
            android:text="@{scoreViewModel.teamAScore.toString()}"
            style="@style/score"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team_A_label"
            tools:text="30" />

        <TextView
            android:id="@+id/team_B_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="16dp"
            android:text="@{scoreViewModel.teamBScore.toString()}"
            style="@style/score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/team_B_Label"
            tools:text="30" />

        <Button
            android:id="@+id/team_A_3pts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:onClick="@{() -> scoreViewModel.onTeamA3Points()}"
            android:text="@string/points_3_label"
            style="@style/pointsButton"
            app:layout_constraintBottom_toTopOf="@+id/team_A_2pts"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team_A_score"
            app:layout_constraintVertical_chainStyle="spread" />

        <Button
            android:id="@+id/team_A_2pts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:onClick="@{() -> scoreViewModel.onTeamA2Points()}"
            android:text="@string/points_2_label"
            style="@style/pointsButton"
            app:layout_constraintBottom_toTopOf="@+id/team_A_freethrow"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team_A_3pts" />

        <Button
            android:id="@+id/team_A_freethrow"
            android:text="@string/free_throw_label"
            style="@style/pointsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> scoreViewModel.onTeamAFreethrow()}"
            app:layout_constraintBottom_toTopOf="@+id/reset"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/team_A_2pts" />

        <Button
            android:id="@+id/team_B_3pts"
            style="@style/pointsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:onClick="@{() -> scoreViewModel.onTeamB3Points()}"
            android:text="@string/points_3_label"
            app:layout_constraintBottom_toTopOf="@+id/team_B_2pts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/team_B_score"
            app:layout_constraintVertical_chainStyle="spread" />

        <Button
            android:id="@+id/team_B_2pts"
            style="@style/pointsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:onClick="@{() -> scoreViewModel.onTeamB2Points()}"
            android:text="@string/points_2_label"
            app:layout_constraintBottom_toTopOf="@+id/team_B_freethrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/team_B_3pts" />

        <Button
            android:id="@+id/team_B_freethrow"
            style="@style/pointsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> scoreViewModel.onTeamBFreethrow()}"
            android:text="@string/free_throw_label"
            app:layout_constraintBottom_toTopOf="@+id/reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/team_B_2pts" />

        <Button
            android:id="@+id/reset"
            style="@style/pointsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="30dp"
            android:onClick="@{() -> scoreViewModel.onReset()}"
            android:text="@string/reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>